@@ -1,6 +1,5 @@
 package io.github.karstenspang.mockjdbc;
 
-import java.util.Collections;
 import java.util.List;
 import static org.junit.jupiter.api.Assertions.*;
 import org.junit.jupiter.api.DisplayName;
@@ -13,14 +12,14 @@ public class WrapTest {
     {
         assertThrows(NullPointerException.class,()->new Wrap(Integer.valueOf(1),(Program)null),"null program");
         assertThrows(NullPointerException.class,()->new Wrap(Integer.valueOf(1),(List<Step>)null),"null steps");
-        assertThrows(NullPointerException.class,()->new Wrap(null,Collections.emptyList()),"null wrapped");
+        assertThrows(NullPointerException.class,()->new Wrap(null,List.of()),"null wrapped");
     }
     
     @Test
     @DisplayName("hashCode returns the hash code of the wrapped object")
     public void testHash()
     {
-        Wrap wrap=new Wrap(Integer.valueOf(1),Collections.emptyList());
+        Wrap wrap=new Wrap(Integer.valueOf(1),List.of());
         assertEquals(1,wrap.hashCode());
     }
     
@@ -28,7 +27,7 @@ public class WrapTest {
     @DisplayName("equals delegates the wrapped object")
     public void testEquals()
     {
-        Wrap wrap=new Wrap(Integer.valueOf(1),Collections.emptyList());
+        Wrap wrap=new Wrap(Integer.valueOf(1),List.of());
         assertTrue(wrap.equals(Integer.valueOf(1)));
     }
     
@@ -36,15 +35,15 @@ public class WrapTest {
     @DisplayName("equals compares with the wrapped object if the target is a Wrap")
     public void testEqualsWrap()
     {
-        Wrap wrap=new Wrap(Integer.valueOf(1),Collections.emptyList());
-        assertTrue(wrap.equals(new Wrap(Integer.valueOf(1),Collections.emptyList())));
+        Wrap wrap=new Wrap(Integer.valueOf(1),List.of());
+        assertTrue(wrap.equals(new Wrap(Integer.valueOf(1),List.of())));
     }
     
     @Test
     @DisplayName("toString returns the expected value")
     public void testToString()
     {
-        Wrap wrap=new Wrap(Integer.valueOf(1),Collections.emptyList());
+        Wrap wrap=new Wrap(Integer.valueOf(1),List.of());
         String expected=getClass().getPackage().getName()+".Wrap:{wrapped:1,stepSupplier:[]}";
         assertEquals(expected,wrap.toString());
     }
